--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <div class="search-card">
             <div class="header">
                 <div class="icon">🏥</div>
-                <h1>MediFind</h1>
+                <h1>HealX</h1>
                 <p>Find nearby hospitals and clinics instantly</p>
             </div>
 
